--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        
-
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,4 +26,12 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext {
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.0'
+    targetSdkVersion = 22
+    minSdkVersion = 17
+    versionCode = 2
+    versionName = "1.1"
 }
